<resources>
    <string name="app_name">devApp</string>
    <string name="copyright"> &#169; My App from 2014</string>
    <string name="app_title">Devices</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="all_device_header">devApp</string>
    <string name="reboot">Restart</string>
    <string name="device_prompt">Choose a device</string>
    <string name="increase_prompt">Increase factor</string>
    <string name="farmer_prompt">Choose farmer</string>
    <string name="hatsunlink"><u>http://www.hatsun.com/</u></string>
    <string name="select_milkanalyzer_Sec">Select Second Milk Analyzer</string>
    <string name="milk_prompt">Cattle type</string>
    <string name="rateChart_prompt">Select Rate Chart</string>
    <string name="sending_mail">Sending mail.....</string>
    <string name="delete">Delete</string>
    <string name="sample_test">Special Cards</string>
    <string name="device_info">Device Info</string>
    <string name="configure_devie">Device Details</string>
    <string name="user_prompt">User role</string>
    <string name="society_id">Society Id</string>
    <string name="farmer_id">Id</string>
    <string name="remember_me">Remember me</string>
    <string name="show_pass">Show password</string>
    <string name="enable_sw_keyboard">Enable Soft Keyboard</string>
    <string name="unregistered_user">Unregistered user</string>
    <string name="weight_note">Weight the milk here!!</string>
    <string name="persnf">Increase rate per snf</string>
    <string name="perfat">Increase rate per fat</string>
    <string name="perclr">Increase rate per clr</string>
    <string name="dailyshift">Shift Report</string>
    <string name="dispatchReport">Dispatch Report</string>
    <string name="centershift">Center shift Report</string>
    <string name="totalPeriodic">Milk bill summary</string>
    <string name="generate">Generate</string>
    <string name="memberbill">Member bill register</string>
    <string name="genbillreg">Generate bill register</string>
    <string name="genbillsumm">Generate bill summary</string>
    <string name="accountSummary">Account summary</string>
    <string name="memberbillSummary">Member bill summary</string>
    <string name="milkoTesterSec">MILKOTESTER 2</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="contact_admin">Contact admin</string>
    <string name="usb_devices">Devices</string>
    <string name="memberlist">All farmers</string>
    <string name="display">Display</string>
    <string name="check_connectivity">Check connectivity and try again.</string>
    <string name="chooser_title">Choose file</string>
    <string name="stellappslink"><u>http://www.stellapps.com/</u></string>
    <string name="morning_session">Morning end session</string>
    <string name="evening_session">Evening end session</string>
    <string name="morning_start">Morning start session</string>
    <string name="valid_from">Valid From</string>
    <string name="valid_to">Valid To</string>
    <string name="name_of_ratechart">Name of Ratechart</string>
    <string name="evening_start">Evening start session</string>
    <string name="min_fat">Min Fat</string>
    <string name="min_snf">Min Snf</string>
    <string name="min_clr">Min Clr</string>
    <string name="max_fat">Max Fat</string>
    <string name="max_snf">Max Snf</string>
    <string name="max_clr">Max Clr</string>
    <string name="all_farmers">Farmers</string>
    <string name="all_users">Users</string>
    <string name="rejection_Summ">Rejection Summary</string>
    <string name="message_limit">Enable SMS</string>
    <string name="SMS_Limit">Set SMS limit per day</string>
    <string name="send_mails">Send mails</string>
    <string name="ratechart_import_access">Ratechart import access</string>
    <string name="ratechart_import_access_operator">Import access to operator</string>
    <string name="allow_simlock">Allow simlock</string>
    <string name="manual_header">Allow manual entry for collection</string>
    <string name="ma_manual">MA manual</string>
    <string name="ws_manual">WS manual</string>
    <string name="clr_calculation">CLR Calculation</string>
    <string name="rate_calculation">Rate Calculation</string>
    <string name="ratechart_param">Rate Chart Parameters</string>
    <string name="select_milkanalyzer">Select Milk Analyzer</string>
    <string name="select_printer">Select Printer</string>
    <string name="select_rdu">Select RDU</string>
    <string name="select_display">Select Display</string>
    <string name="select_weighing_Scale">Select Weighing scale</string>
    <string name="select_weighing">Select Round-off</string>
    <string name="select_gateWay">Select Gateway</string>
    <string name="change_milktype">Change Milk Type</string>
    <string name="select_usbtype">Select USB Type</string>
    <string name="select_roundOff">Select Round-off</string>
    <string name="createAndEditRatechart">Create and Edit Rate chart</string>
    <string name="createAndEdit">Create and Edit</string>
    <string name="change_milktype_Buff">* Default 0 means not applicable. Enter fat limit value. Milk with fat value greater or equal to this is consider as Buffalo milk. This is applicable when a common rate chart is used for cow and buffalo milk.</string>
    <string name="select_Baudrate">Select Baudrate</string>
    <string name="mandatory_check">Mandatory Checks</string>
    <string name="support_unregister_user">Support unregistered user</string>
    <string name="support_keypad">Support only keyboard</string>
    <string name="select_ratehcart">Select rate chart</string>
    <string name="rejection_criteria">Rejection Criteria</string>
    <string name="all_societies">Societies</string>
    <string name="fat">Fat</string>
    <string name="Weigh">Weighing scale</string>
    <string name="Show_amount">Amount</string>
    <string name="Show_added_water">Added water</string>
    <string name="milk_analyser">Milk analyser</string>
    <string name="malm">Master Classic LM2</string>
    <string name="lactoscan">Lactoscan</string>
    <string name="milkotester">MILKOTESTER</string>
    <string name="milkanalyser">MILK ANALYZER</string>
    <string name="weighingmachine">WEIGHING MACHINE</string>
    <string name="rdu">RDU</string>
    <string name="printer">PRINTER</string>
    <string name="maem">Eco Milk Ultra</string>
    <string name="snf">SNF</string>
    <string name="clr">CLR</string>
    <string name="base_rate">Base Rate</string>
    <string name="default_fat">2.5</string>
    <string name="default_snf">8.5</string>
    <string name="default_clr">25.0</string>
    <string name="default_baserate">23.0</string>
    <string name="from">from...</string>
    <string name="to">to...</string>
    <string name="rate_change">rate change</string>
    <string name="addnew_rule">Add rule</string>
    <string name="remove_rule">Remove rule</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="createRatechart">Create Rate Chart</string>
    <string name="ruleText2">2nd rule added</string>
    <string name="ruleText3">3rd rule added</string>
    <string name="ruleText4">4th rule added</string>
    <string name="ruleText5">5th rule added</string>
    <string name="ruleText6">6th rule added</string>
    <string name="mandatory"><font color="#ffff0000">Red color</font></string>
    <string name="done">Done</string>
    <string name="zero_device"> Device(s) Found</string>
    <string name="no_device">No Device Found</string>
    <string name="next">Next</string>
    <string name="refreshing">Refreshing...</string>
    <string name="menu">Menu</string>
    <string name="reports">Reports</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="submit">Submit</string>
    <string name="manual">Manual</string>
    <string name="enter_farmer">Enter Farmer Id</string>
    <string name="milk_weigh">Milk Weighing</string>
    <string name="farmer_name">Name</string>
    <string name="num_of_cans">Number of cans</string>
    <string name="cow">Cow</string>
    <string name="read">Read</string>
    <string name="auto">Auto</string>
    <string name="milk_weight">Qty</string>
    <string name="show_details">Show details</string>
    <string name="hide_details">Hide details</string>
    <string name="temperature">Temprature</string>
    <string name="density">Density</string>
    <string name="protein">Protein</string>
    <string name="lactose">Lactose</string>
    <string name="salts">Salts</string>
    <string name="added_water">Added water</string>
    <string name="freezing_point">Freezing point</string>
    <string name="cattle_type">Cattle type</string>
    <string name="end_shift">End shift</string>
    <string name="print">Print</string>
    <string name="next_farmer">Next farmer</string>
    <string name="importrateviaExcel">Import Rate Chart Via Excel</string>
    <string name="importRateChart">Import Rate Chart</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="toast_invalid_email">Invalid email or password!</string>
    <string name="toast_enter_user">Please enter user name</string>
    <string name="toast_incorrect_user">Incorrect UserID!!</string>
    <string name="toast_message_send">Message sending..</string>
    <string name="toast_sms_sent">SMS sent</string>
    <string name="toast_generic_faliure">Generic failure</string>
    <string name="toast_no_service">No service</string>
    <string name="toast_radio_off">Radio off</string>
    <string name="toast_null_pdu">NULL PDU</string>
    <string name="toast_sms_delivered">SMS delivered</string>
    <string name="toast_sms_not_del">SMS not delivered</string>
    <string name="toast_email_sending">Email sending</string>
    <string name="toast_email_sent">Email sent</string>
    <string name="reject">Reject</string>
    <string name="rate">Rate</string>
    <string name="amount">Amount</string>
    <string name="remarks">Remarks</string>
    <string name="quality_of_milk">Milk Quality</string>
    <string name="getPeriodicRcords">Get periodic records</string>
    <string name="periodicReport">Periodic Report</string>
    <string name="dev_connect_button">OPEN</string>
    <string name="dev_disconnect_button">CLOSE</string>
    <string name="usb_tab">USB</string>
    <string name="restore_data">Restore devApp Data</string>
    <string name="forgot_operator_password">Forgot Operator Password</string>
    <string name="forgot_manager_password">Forgot Manager Password</string>
    <string name="restore_all_user">Restore All Users</string>
    <string name="delete_all_ratecharts">Delete All Rate charts</string>
    <string name="restore_explanation">This will erase all the existing user details, and will generate the default users.Please contact the devApp team for further information.</string>
    <string name="delete_rate_explanation">This will delete the all existing ratechart in Tab. If there is no rate chart present in application user will not be able to do further collection. So press "Delete" only if you have new rate chart in your Usb device or contact with devApp tram for further information.</string>
    <string name="rateChart_note">Note: Below fields are not required while importing the encrypted rate chart.</string>
    <string name="noNetword">Please check the network connectivity.</string>
    <string name="total_farmer">Members</string>
    <string name="total_records">Test records</string>
    <string name="total_collection">Collection</string>
    <string name="date">dd</string>
    <string name="month">Mon</string>
    <string name="year">YYYY</string>
    <string name="evening">Evening</string>
    <string name="morning">Morning</string>
    <string name="shift">Shift</string>
</resources>