<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnblueNormal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/ic_launcher" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rel_1"
        android:layout_marginTop="0dp"
        android:background="@color/thinline" />

    <RelativeLayout
        android:id="@+id/rel_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2">

        <TextView
            android:id="@+id/t_shift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/shift"
            android:textColor="@color/textHeadingColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_shift"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/t_shift"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingLeft="8dp"
            android:paddingRight="0dp"
            android:paddingTop="5dp">

            <RadioButton
                android:id="@+id/radio_morning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:checked="true"
                android:text="@string/morning"
                android:textColor="@color/textHeadingColor"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/radio_evening"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/evening"
                android:textColor="@color/textHeadingColor"
                android:textSize="15sp" />

        </RadioGroup>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/radio_shift"
            android:layout_marginTop="0dp"
            android:background="@color/thinline" />

        <TextView
            android:id="@id/t_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/view3"
            android:padding="20dp"
            android:text="Select Date" />

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/t_date"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">


            <Spinner
                android:id="@+id/dateDD"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:prompt="@string/date" />

            <Spinner
                android:id="@+id/monthMON"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:prompt="@string/month" />

            <Spinner
                android:id="@+id/yearYYYY"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:prompt="@string/year" />

        </LinearLayout>

    </RelativeLayout>


</LinearLayout>