<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:id="@+id/lnRateLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.Holo.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:padding="6dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.eevoskos.robotoviews.widget.RobotoTextView
                android:id="@+id/tvBaseRate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/base_rate"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:typeface="condensed" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/etBaseRateSet1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="base rate.."
                android:inputType="numberDecimal"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/fat"
                android:textColor="@color/black" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/etFatFrom1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/from"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/etFatTo1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/to"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/etRateChange1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/rate_change"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/snf"
                android:textColor="@color/black" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/etSnfFrom1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/from"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/etSnfTo1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/to"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

            <com.andreabaccega.widget.FormEditText
                android:id="@+id/etRateChangeForSnf1"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/rate_change"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lnRateLayout1"
        android:layout_margin="5dp"
        android:background="@drawable/btn_selector_positive"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/done"
        android:textColor="#ffffff" />

</RelativeLayout>